<resources>
    <string name="app_name">Settings</string>
    <string name="index_wifi">WiFi</string>
    <string name="index_bluetooth">Bluetooth</string>
    <string name="index_projection">Projection</string>
    <string name="index_about">About</string>
    <string name="index_date">Date</string>
    <string name="index_language">Language</string>
    <string name="index_reset">Reset</string>
    <string name="index_settings">Settings</string>
    <string name="projection_title">Projection Settings</string>
    <string name="projection_mode">Projection method</string>
    <string name="projection_auto">Auto-correct</string>
    <string name="projection_four">Four-point keystone correction</string>
    <string name="projection_zoom">Zoom</string>
    <string name="projection_reset">Reset</string>
    
    <string name="projection_front">Front Projection</string>
    <string name="projection_rear">Rear Projection</string>
    <string name="projection_front_ceiling">Front Ceiling Projection</string>
    <string name="projection_rear_ceiling">Rear Ceiling Projection</string>

    <string name="projection_auto_enable">Enable</string>
    <string name="projection_auto_disable">Disable</string>

</resources>