<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background_color"
    android:paddingTop="150dp"
    android:paddingStart="80dp">

    <LinearLayout
        android:id="@+id/LL_wifi"
        android:layout_width="260dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:background="@drawable/item_selector"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/wifi"
            android:paddingTop="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/index_wifi"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/uns_2"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_bluetooth"
        android:layout_width="260dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:background="@drawable/item_selector"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LL_wifi">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/bluetooth"
            android:paddingTop="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/index_bluetooth"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/uns_2"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_projection"
        android:layout_width="260dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:background="@drawable/item_selector"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LL_bluetooth">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/projection"
            android:paddingTop="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/index_projection"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/uns_2"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_about"
        android:layout_width="260dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:background="@drawable/item_selector"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LL_projection">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/about"
            android:paddingTop="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/index_about"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/uns_2"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_date"
        android:layout_width="260dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:background="@drawable/item_selector"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintTop_toBottomOf="@+id/LL_wifi"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/date"
            android:paddingTop="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/index_date"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/uns_2"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_language"
        android:layout_width="260dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:background="@drawable/item_selector"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/LL_wifi"
        app:layout_constraintStart_toEndOf="@+id/LL_date">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/language"
            android:paddingTop="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/index_language"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/uns_2"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_reset"
        android:layout_width="260dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:background="@drawable/item_selector"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/LL_wifi"
        app:layout_constraintStart_toEndOf="@+id/LL_language">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/reset"
            android:paddingTop="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/index_reset"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/uns_2"
            android:gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LL_settings"
        android:layout_width="260dp"
        android:layout_height="210dp"
        android:orientation="vertical"
        android:background="@drawable/item_selector"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/LL_wifi"
        app:layout_constraintStart_toEndOf="@+id/LL_reset">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:src="@drawable/settings"
            android:paddingTop="40dp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingBottom="30dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:text="@string/index_settings"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:fontFamily="@font/uns_2"
            android:gravity="center_horizontal"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>